Fix layout on mobile

--- a/foundations/05-flex/00-PROJECT-landing-page/css/style.css
+++ b/foundations/05-flex/00-PROJECT-landing-page/css/style.css
@@ -322,9 +322,11 @@ p {
   }
 
   .call-to-action-wrapper {
-    height: 140px;
-    min-width: 300px;
+    height: auto;
+    min-width: 100px;
+    width: 100%;
     flex-direction: column;
+    padding: 30px;
   }
 
   .call-to-action-wrapper .btn{
